Limit the background trials upload size to 100Kib when using mobile data

The crash data is uploaded only if the file size was less than 10MB.
But, this does not consider if device is running on wifi or mobile data.
Uploading 10Mib crash files over data will be undesireable for android
and ios users. To fix this issue, the limit is set to 100Kib if the
connection is over data or connection type is unknown when tracing is
running for background field trials.

BUG=622047

Review-Url: https://codereview.chromium.org/2085623005
Cr-Commit-Position: refs/heads/master@{#401644}

Former-commit-id: f7de02da8220c2d43301d41ee232002e79d87218