chrome/browser/tracing/background_tracing_field_trial.cc
@@ -9,6 +9,7 @@
 
 #include "base/json/json_reader.h"
 #include "base/metrics/field_trial.h"
+#include "build/build_config.h"
 #include "chrome/browser/browser_process.h"
 #include "chrome/browser/tracing/crash_service_uploader.h"
 #include "chrome/common/variations/variations_util.h"
@@ -16,6 +17,7 @@
 #include "content/public/browser/background_tracing_config.h"
 #include "content/public/browser/background_tracing_manager.h"
 #include "content/public/browser/browser_thread.h"
+#include "net/base/network_change_notifier.h"
 #include "url/gurl.h"
 
 namespace tracing {
@@ -45,6 +47,16 @@ void UploadCallback(const std::string& upload_url,
 
   if (GURL(upload_url).is_valid())
     uploader->SetUploadURL(upload_url);
+
+#if defined(OS_ANDROID) || defined(OS_IOS)
+  auto connection_type = net::NetworkChangeNotifier::GetConnectionType();
+  if (connection_type != net::NetworkChangeNotifier::CONNECTION_WIFI &&
+      connection_type != net::NetworkChangeNotifier::CONNECTION_ETHERNET &&
+      connection_type != net::NetworkChangeNotifier::CONNECTION_BLUETOOTH) {
+    // Allow only 100KiB for uploads over data.
+    uploader->SetMaxUploadBytes(100 * 1024);
+  }
+#endif  // defined(OS_ANDROID) || defined(OS_IOS)
 
   uploader->DoUpload(
       file_contents->data(), content::TraceUploader::UNCOMPRESSED_UPLOAD,
